--- a/src/styles.css
+++ b/src/styles.css
@@ -2,8 +2,11 @@
     box-sizing: border-box;
     margin: 0px;
     padding: 0px;
-
     font-family: Tahoma;
+}
+
+body {
+    background-color: white;
 }
 
 .page-title {
