--- a/src/styles.css
+++ b/src/styles.css
@@ -11,9 +11,21 @@ body {
 
 .page-title {
     margin: 5px;
-    padding: 5px;
+    padding: 10px;
     text-align: center;
     border: 2px black solid;
+}
+
+.page-title .logo {
+    width: 60px;
+    position:relative;
+    top: 5px;
+}
+
+.page-title h1 {
+    display: inline-block;
+    padding-left: 5px;
+    font-size: 40px;
 }
 
 .btn {
