--- a/src/styles.css
+++ b/src/styles.css
@@ -40,24 +40,12 @@ body {
 
 /* HOME PAGE/SNOOP */
 
-ul {
-    margin: 10px;
+nav {
+    margin-top: 10px;
     display: grid;
     grid-template-columns: auto auto auto;
-}
-
-li {
-    display: block;
-    margin: auto;
-    padding: 2px;
-    width: 75px;
-
-
-    text-align: center;
-    text-decoration: none;
-    list-style-type: none;
-    border: 2px black solid;
-
+    column-gap: 15px;
+    justify-content: center;
 }
 
 label {
@@ -88,30 +76,42 @@ textarea {
     grid-template-columns: auto auto;
     margin: auto;
     padding: 2px;
-    width: 475px;
+    width: 500px;
 }
 
-.entries {
+.entry-container .entries {
     margin: auto;
     padding: 5px;
     width: 425px;
     border: 2px black solid;
 }
 
-.entries-snoop {
-    margin: 2px auto;
-    padding: 5px;
-    width: 475px;
-    border: 2px black solid;
+.entry-container .current-entry-title {
+    display: block;
+    font-weight: bold;
 }
 
-.delete {
+.entry-container .delete {
     color: lightcoral;
     background-color: white;
     border: 2px red solid;
 }
 
-.current-entry-title {
-    display: block;
-    font-weight: bold;
+.entry-container .rating  {
+    padding: 10px;
+    text-align: center;
+}
+
+.entry-container .rating  a {
+    color: inherit;
+}
+
+.entry-container .like  {
+    font-size: 20px;
+    color: lightgreen;
+}
+
+.entry-container .dislike  {
+    font-size: 20px;
+    color: lightcoral;
 }
