--- a/src/styles.css
+++ b/src/styles.css
@@ -41,11 +41,14 @@ body {
 /* HOME PAGE/SNOOP */
 
 nav {
-    margin-top: 10px;
+    position: absolute;
+    right: 0px;
+    top: 10px;
+    margin: 5px;
+    padding: 15px;
     display: grid;
     grid-template-columns: auto auto auto;
     column-gap: 15px;
-    justify-content: center;
 }
 
 label {
@@ -62,6 +65,7 @@ input {
 textarea {
     display: block;
     margin: 10px auto;
+    padding: 5px;
     resize:none;
 }
 
