--- a/client/src/styles.css
+++ b/client/src/styles.css
@@ -57,7 +57,6 @@ nav {
     margin: 5px;
     padding: 15px;
     display: grid;
-    grid-template-columns: auto auto auto;
     column-gap: 15px;
 }
 
@@ -65,6 +64,35 @@ nav a:hover {
     font-weight: bolder;
 }
 
+.nav-list {
+    list-style-type: none;
+    padding: 0;
+    margin: 0;
+    grid-template-columns: auto atuo auto;
+}
+
+.nav-list li {
+    display: inline-block;
+    margin: 8px;
+    
+}
+
+.nav-list li a {
+    text-decoration: none;
+    color: black; 
+}
+
+.nav-list li a:hover {
+    font-weight: bolder;
+}
+
+.left-aside, .right-aside {
+    border: 2px solid black;
+    border-radius: 5px;
+    padding: 10px;
+    width: 200px;
+    margin: auto;
+}
 
 label {
     display: block;
@@ -118,6 +146,11 @@ textarea:focus {
     color: #ffffff;
 }
 
+.homepage-container {
+    display: grid;
+    grid-template-columns: auto auto auto;
+}
+
 
 .entry-container {
     display: grid;
@@ -145,6 +178,7 @@ textarea:focus {
     color: lightcoral;
     background-color: white;
     border: 2px red solid;
+    border-radius: 5px;
 }
 
 .entry-container .delete:hover {
@@ -167,7 +201,8 @@ textarea:focus {
     color: lightgreen;
 }
 
-.entry-container .like:hover {
+.entry-container .like:hover,
+.entry-container .dislike:hover {
     font-weight: bolder;
 }
 
@@ -176,9 +211,6 @@ textarea:focus {
     color: lightcoral;
 }
 
-.entry-container .dislike:hover {
-    font-weight: bolder;
-}
 
 :root {
     --light-background-color: #ffffff; 
@@ -260,19 +292,22 @@ body {
     color: #ffffff !important; 
 }
 
-.dark-theme .btn:hover,
-.dark-theme #post-entry:hover,
-.dark-theme li:hover {
+
+.dark-theme #post-entry:hover {
     background-color: #588c7e !important;
     border-color: #ffffff;
     color: white;
 }
 
-.dark-theme .btn:active,
-.dark-theme #post-entry:active,
-.dark-theme li:active {
+.dark-theme #post-entry:active {
     background-color: #7dc0ae !important;
 }
+
+.nav-list .nav-link:hover {
+    font-weight: bolder;
+}
+
+
 
 
 
