--- a/client/src/styles.css
+++ b/client/src/styles.css
@@ -84,6 +84,20 @@ nav a:hover {
     font-weight: bolder;
 }
 
+#middle-container {
+    display: block;
+    margin: 10px auto;
+    width: 650px;
+}
+
+#entries-container {
+    margin: auto;
+    padding: 5px;
+    width: 625px;
+    height: 500px;
+    overflow: auto;
+}
+
 .left-aside, .right-aside {
     border: 2px solid black;
     border-radius: 5px;
@@ -128,8 +142,10 @@ nav a:hover {
 }
 
 label {
+    margin: auto;
     display: block;
     text-align: center;
+    width: auto;
 }
 
 input {
@@ -145,7 +161,7 @@ input {
 textarea {
     display: block;
     margin: 10px auto;
-    width: 250px;
+    width: 400px;
     border-radius: 5px;
     border: 2px solid black;
     background-color: #fdfdf3;
@@ -156,6 +172,13 @@ textarea {
 input:focus,
 textarea:focus {
     background-color: #ffffc6;
+}
+
+#entry-length {
+    display: block;
+    width: 400px;
+    margin: auto;
+    font-size: 12px;
 }
 
 #post-entry {
@@ -182,13 +205,15 @@ textarea:focus {
 .homepage-container {
     display: grid;
     grid-template-columns: auto auto auto;
+    margin: 10px 5px 5px 5px;
+    height: 91vh;
 }
 
 
 .entry-container {
     display: grid;
     grid-template-columns: auto auto;
-    margin: auto;
+    margin: 10px auto;
     padding: 2px;
     width: 475px;
 }
@@ -341,6 +366,15 @@ body {
 
 /* LOG IN/SIGN IN */
 
+.ls-form {
+    margin: auto;
+    padding: 10px;
+    border: 2px solid;
+    border-radius: 5px;
+    width: 600px;
+    height: auto
+}
+
 .sign-log {
     text-align: center;
     margin: 20px;
@@ -351,22 +385,10 @@ body {
     color: transparent;
 }
 
-#terms-container {
-    width: 675px;
-    border: 2px black solid;
-}
-
-#terms-label {
-    margin: auto;
-    padding: none;
-    width: 500px;
-}
-
 #terms {
-    display: inline;
-    margin: 0px;
-    padding: 0px;
-    width: auto;
+    margin: auto;
+    text-align: center;
+    width: 500px;
 }
 
 
