--- a/client/src/styles.css
+++ b/client/src/styles.css
@@ -49,9 +49,9 @@
 /* HOME PAGE/SNOOP */
 
 nav {
-    position: absolute;
+    position: fixed; /* position: absolute */
     right: 0px;
-    top: 10px;
+    top: 0px;
     margin: 5px;
     padding: 15px;
     display: grid;
@@ -87,29 +87,40 @@ nav a:hover {
 #middle-container {
     display: block;
     margin: 10px auto;
-    width: 650px;
+    width: 625px;
 }
 
-#entries-container {
+#entries-container { /* delete if needed */
     margin: auto;
     padding: 5px;
-    width: 625px;
+    width: 600px;
     height: 500px;
-    overflow: auto;
 }
 
 .left-aside, .right-aside {
     border: 2px solid black;
     border-radius: 5px;
     padding: 10px;
-    width: 95%;
+    width: 33%;
     margin: auto;
     height: 90%;
-    position: relative; 
+    position: fixed; /* position: relative */
     overflow: hidden; /* hides the overflow */
     display: flex; 
     align-items: center; 
-    justify-content: center; 
+    justify-content: center;
+    z-index: -1; /* delete if needed */
+}
+
+/* delete if needed */
+.left-aside {
+    top: 75px;
+    left: 10px;
+}
+/* delete if needed */
+.right-aside {
+    top: 75px;
+    right: 10px;
 }
 
 /* sample text for asides*/
@@ -203,8 +214,9 @@ textarea:focus {
 }
 
 .homepage-container {
-    display: grid;
+    /*display: grid;
     grid-template-columns: auto auto auto;
+    */
     margin: 10px 5px 5px 5px;
     height: 91vh;
 }
