--- a/client/src/styles.css
+++ b/client/src/styles.css
@@ -228,6 +228,7 @@ textarea:focus {
     margin: 10px auto;
     padding: 2px;
     width: 475px;
+    font-size: 14px;
 }
 
 .entry-container .entries {
