--- a/client/src/styles.css
+++ b/client/src/styles.css
@@ -507,4 +507,70 @@ body {
     border: 2px red solid;
 }
 
+/* Overlay */
+.overlay {
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background: rgba(0, 0, 0, 0.5); 
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    z-index: 1000;
+}
 
+/* warning box */
+.warning-box {
+    background: var(--light-background-color); 
+    color: var(--light-text-color); 
+    padding: 20px;
+    border-radius: 5px;
+    text-align: center;
+    box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.5);
+}
+
+.warning-box button {
+    margin: 10px;
+    padding: 10px;
+    border: none;
+    border-radius: 5px;
+    cursor: pointer;
+    transition: background-color 0.3s, color 0.3s;
+}
+
+.warning-box button:hover {
+    background-color: #c7e0c7;
+    color: #000000;
+}
+
+.warning-box button:active {
+    background-color: #588c7e;
+    color: #ffffff;
+}
+
+/* dark mode */
+.dark-theme .overlay {
+    background: rgba(0, 0, 0, 0.7); 
+}
+
+.dark-theme .warning-box {
+    background: var(--dark-background-color); 
+    color: var(--dark-text-color); 
+}
+
+.dark-theme .warning-box button {
+    background-color: #444; 
+    color: #fff; 
+}
+
+.dark-theme .warning-box button:hover {
+    background-color: #588c7e; 
+    color: #fff;
+}
+
+.dark-theme .warning-box button:active {
+    background-color: #7dc0ae; 
+    color: #fff;
+}
