--- a/client/src/styles.css
+++ b/client/src/styles.css
@@ -248,7 +248,7 @@ textarea:focus {
 
 .entry-container .current-entry {
     display: block;
-    margin-bottom: 10px;
+    margin: 10px 0px;
 }
 
 .entry-container img {
