--- a/client/src/styles.css
+++ b/client/src/styles.css
@@ -227,6 +227,14 @@ textarea:focus {
     grid-template-columns: 40% 20% 40%;
 }
 
+.liked-container {
+    justify-self: end;
+}
+
+.disliked-container {
+    justify-self: start;
+}
+
 .entry-container {
     display: grid;
     grid-template-columns: auto auto;
