--- a/client/src/styles.css
+++ b/client/src/styles.css
@@ -2,7 +2,7 @@
     box-sizing: border-box;
     margin: 0;
     padding: 0;
-    font-family: Tahoma;
+    font-family: Tahoma, Arial, Helvetica, sans-serif;
 }
 
 .page-title {
