--- a/client/src/styles.css
+++ b/client/src/styles.css
@@ -66,7 +66,7 @@ nav a:hover {
     list-style-type: none;
     padding: 0;
     margin: 0;
-    grid-template-columns: auto atuo auto;
+    grid-template-columns: auto auto auto;
 }
 
 .nav-list li {
