--- a/client/src/styles.css
+++ b/client/src/styles.css
@@ -202,15 +202,8 @@ textarea:focus {
 
 .wof-container {
     display: grid;
-    grid-template-columns: 40% 20% 40%;
-}
-
-.liked-container {
-    justify-self: end;
-}
-
-.disliked-container {
-    justify-self: start;
+    grid-template-columns: auto auto;
+    gap: 5%;
 }
 
 .entry-container {
