--- a/client/src/styles.css
+++ b/client/src/styles.css
@@ -14,7 +14,7 @@ h3 {
 }
 
 p {
-    font-size: 1.70vw;
+    font-size: 1.75vw;
 }
 
 .page-title {
@@ -169,13 +169,13 @@ label {
     display: block;
     text-align: center;
     width: 50%;
-    font-size: 2.25vw;
+    font-size: 2vw;
 }
 
 input {
     display: block;
     margin: 10px auto;
-    width: 50%;
+    width: 100%;
     border-radius: 5px;
     border: 2px solid black;
     background-color:#fdfdf3;
@@ -186,7 +186,7 @@ input {
 textarea {
     display: block;
     margin: 10px auto;
-    width: 75%;
+    width: 100%;
     border-radius: 5px;
     border: 2px solid black;
     background-color: #fdfdf3;
@@ -202,9 +202,8 @@ textarea:focus {
 
 #entry-length {
     display: block;
-    width: 75%;
+    width: 100%;
     margin: auto;
-    font-size: 2vw;
 }
 
 /* WALL OF FAME STYLING */
@@ -222,7 +221,7 @@ textarea:focus {
     margin: 10px auto;
     padding: 2px;
     width: 97%;
-    min-width: 500px;
+    min-width: 400px;
     font-size: 1.75vw;
 }
 
@@ -234,27 +233,18 @@ textarea:focus {
     gap: 1%;
     margin: 10px auto;
     padding: 2px;
-    width: 50vw;
-    font-size: 14px;
+    width: 97%;
 }
 
 .snoop .rating  {
     padding: 10px;
     text-align: center;
+    font-size: 3vw;
 }
 
 .snoop .rating  a {
     color: inherit;
-}
-
-.snoop .like  {
-    font-size: 2vw;
-    color: lightgreen;
-}
-
-.snoop .dislike  {
-    font-size: 2vw;
-    color: lightcoral;
+    font-size: 2.5vw;
 }
 
 .snoop .like:hover,
@@ -339,7 +329,7 @@ textarea:focus {
 .delete {
     width: 100%;
     padding: 5px;
-    font-size: 1.5vw;
+    font-size: 3vw;
     color: lightcoral;
     background-color: white;
     border: 2px red solid;
@@ -449,7 +439,7 @@ body {
     padding: 10px;
     border: 2px solid;
     border-radius: 5px;
-    width: 50%;
+    width: 97%;
     height: auto
 }
 
@@ -635,47 +625,10 @@ body {
     color: #fff;
 }
 
-/* Overlay for landscape mode prompt */
-.landscape-prompt {
-    display: none;
-    position: fixed;
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%, -50%);
-    background-color: rgba(0, 0, 0, 0.8);
-    color: white;
-    padding: 20px;
-    border-radius: 10px;
-    text-align: center;
-    z-index: 10000;
-}
-
-.landscape-prompt.active {
-    display: flex;
-}
-
-.landscape-prompt .message {
-    font-size: 20px;
-    padding: 20px;
-    border: 2px solid white;
-    border-radius: 10px;
-}
-
-@media only screen and (max-width: 768px) and (orientation: portrait) {
-    /*
-    .landscape-prompt {
-      display: block;
-    }
-    */
-  
-    /*
-    .app-content, .page-title {
-      display: none;
-    }
-    */
+@media only screen and (max-width: 768px) {
 
     .nav-list {
-        flex-direction: column;
+        flex-direction: column-reverse;
         border: 2px solid;
         border-radius: 5px;
     }
@@ -683,7 +636,6 @@ body {
     .nav-list li {
         flex: auto;
         margin: 5px;
-        font-size: 14px;
     }
 
     .left-aside, .right-aside {
@@ -691,18 +643,39 @@ body {
     }
 
     #middle-container {
-        width: 95%;
+        width: 97%;
+    }
+
+    #settings-menu {
+        width: 50%;
+        height: auto;
+    }
+
+    .snoop .rating  a {
+        font-size: 3.5vw;
     }
 
     h2 {
-        font-size: 3vw;
+        font-size: 4.5vw;
     }
 
     h3 {
-        font-size: 2.5vw;
+        font-size: 3.5vw;
     }
     
      p {
-        font-size: 2.25vw;
+        font-size: 3vw;
+    }
+
+    label {
+        font-size: 3vw;
+    }
+
+    input {
+        font-size: 3vw;
+    }
+    
+    textarea {
+        font-size: 3vw;
     }
   }
