--- a/client/src/styles.css
+++ b/client/src/styles.css
@@ -48,13 +48,13 @@ p {
 .btn {
     display: block;
     margin: 10px auto;
-    padding: 5px;
+    padding: 10px;
     background-color: white;
     border: 2px solid black;
     border-radius: 5px;
     cursor: pointer;
     transition: background-color 0.3s, color 0.3s;
-    font-size: 1.5vw;
+    font-size: 1.70vw;
 }
 
 .btn:hover {
@@ -671,6 +671,16 @@ body {
     .delete {
         font-size: 3.5vw;
     }
+
+    .btn {
+        font-size: 2.75vw; 
+    }
+
+    #settings-menu {
+        height: auto;
+    }
+    
+
 
     h2 {
         font-size: 4.5vw;
